docs: Updated interface information.

--- a/src/main/java/teampixl/com/pixlpos/database/interfaces/.Implementation.md
+++ b/src/main/java/teampixl/com/pixlpos/database/interfaces/.Implementation.md
@@ -36,5 +36,17 @@ OrdersInterface
     - addOrderItem(Order order, MenuItem item, int quantity) : void
     - removeOrderItem(Order order, MenuItem item, int quantity) : void
     - updateOrderItem(Order order, MenuItem item, int newQuantity) : void
+
+IngredientsInterface
+    - getIngredients() : List<Ingredient>
+    - addIngredient(Ingredient ingredient) : void
+    - removeIngredient(Ingredient ingredient) : void
+    - updateIngredient(Ingredient ingredient) : void
+
+StockInterface
+    - getStock() : List<Stock>
+    - addStock(Stock stock) : void
+    - removeStock(Stock stock) : void
+    - updateStock(Stock stock) : void
 ```
 
